--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==4.4.0
 attrs==24.2.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
@@ -6,6 +7,9 @@ flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
 idna==3.8
 iniconfig==2.0.0
 mccabe==0.7.0
@@ -17,6 +21,7 @@ pycodestyle==2.9.1
 pyflakes==2.5.0
 pytest==7.1.3
 requests==2.32.3
+sniffio==1.3.1
 soupsieve==2.6
 tomli==2.0.1
 urllib3==2.2.2
